Backport functional on 1.20.1, rendering broken, functionality intact.